--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				<span class="profile image"><img src="images/profile-img.png" alt="Gaganjot Shan" /></span>
 				<div class="intro-content">
 					<p> I’m Gaganjot Shan, an AI Engineer with over two years of experience in NLP, large language models, and data-driven application development.
-						I love solving complex problems and crafting scalable and sustainable solutions that drive efficiency and positive impact.
+						I love solving complex problems and crafting scalable and sustainable solutions.
 						I am really passionate about environment sustainiability, knowledge sharing and continuous growth</br></p>
 						
 					<p> My unique background includes three years as a research scholar at the Indian Institute of Science Education and Research (IISER, Trivandrum), 
@@ -87,8 +87,9 @@
 						I enjoy integrating this multidisciplinary experience into my data science
 						work. I thrive on tackling tough problems and am always eager to learn something new.</p>
 
-					<p>My goal is to contribute effectively to meaningful projects that make a
-						positive impact. Take a look around to explore my portfolio and discover how I bring my skills
+					<p> My goal is to contribute effectively to meaningful projects
+						that drive efficiency and positive impact. 
+						Take a look around to explore my portfolio and discover how I bring my skills
 						and passion to every endeavor and feel free to check out my <a href="#resume">resume!</a></p>
 					<h2>Skills!</h2>
 					<div class="tiles">
